--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@800&display=swap');
+@font-face {
+    font-family: "swishbuttonsnf";
+    src: url("static/swishbuttonsnf.woff2") format('woff');
+}
 html {
-    background: #222;
+    background: #000;
     font-size: 1.2em;
 }
 
@@ -8,38 +12,103 @@ body {
     background: #333;
     font-family: monospace;
     color: #ddd;
-    width: 600px;
+    max-width: 800px;
     outline: 1px solid #555;
     margin: auto auto;
     padding: 20px;
-    box-shadow: 0px 0px 20px #555;
+    overflow-y: scroll;
+}
+
+flex {
+    display: flex;
+    flex-direction: row;
 }
 
 logo {
-    font-family: 'MuseoModerno', cursive;
+    font-family: 'swishbuttonsnf';
     color: rgb(214, 139, 0);
-    font-size: 2em;
+    font-size: 1.2em;
     display: block;
-    border-bottom: 1px solid #555;
+    text-align: right;
 }
 
-widget {
-    display: inline-block;
+nav {
+    display: flex;
+    flex-direction: column;
 }
 
-widget title {
-    font-family: 'MuseoModerno', cursive;
+nav a {
+    display: block;
+    padding: 5px;
+    text-decoration: none !important;
+}
+
+nav a:hover {
+    background: #666;
+    display: block;
+}
+
+nav a.active {
+    outline: 1px solid #999;
+    background: #666;
+}
+
+page {
+    padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+title {
+    font-family: 'swishbuttonsnf';
     display: block;
     padding-bottom: 0.5em;
 }
 
-widget content {
+subtitle {
     display: block;
+    font-weight: bold;
+    font-size: 0.8em;
+    background: #744720;
+    text-align: center;
+    border-radius: 5px;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    padding: 0.5em;
+}
+
+.hidden {
+    display: none;
+}
+
+.cancel:before {
+    content: '\2716';
+    color: #ff2a2a;
+    width: 20px;
+}
+
+.ok:before {
+    content: '\2714';
+    color: #02ff02;
+    width: 20px;
+}
+
+purpose {
+    display: block;
+    padding-bottom: 2em;
+    padding-left: 10%;
+    font-size: 0.9em;
+}
+
+description {
+    display: block;
+    padding-bottom: 2em;
 }
 
 a {
     color: rgb(214, 139, 0);
     text-decoration: none;
+    cursor: pointer;
 }
 
 a:hover {
@@ -49,4 +118,25 @@ a:hover {
 
 a:active {
     color: rgb(138, 90, 0);
+}
+
+table {
+    border-collapse: collapse;
+}
+
+table thead tr th,
+table tbody tr td {
+    padding: 8px 12px;
+    text-align: center;
+    border: 1px solid #ddd;
+    border-collapse: collapse;
+}
+
+img.clickable {
+    width: 250px;
+    transition: all 300ms;
+}
+
+img.clickable.active {
+    transform: scale(2);
 }
