include  main page

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a {
     display: block;
     padding: 5px;
     margin: 5px;
-    width: 200px;
+    width: 100px;
     text-decoration: none !important;
 }
 
@@ -66,6 +66,11 @@ title {
     font-family: 'swishbuttonsnf';
     display: block;
     padding-bottom: 0.5em;
+}
+
+.titleimg {
+    float:right;
+    padding: 0 0 0 15px;
 }
 
 subtitle {
